# poc0

./: .gitignore  .gitmodules  AGENT2_DELIVERABLES.md  AGENT3_DELIVERABLES.md  CLAUDE.md  CMakeLists.txt  README.md  special-distrobox-testing.md
agent1/: brief.md  internals.md  reference.md
agent2/: brief.md  internals.md  reference.md
agent3/: brief.md  internals.md  reference.md
cmake/: FindWaylib.cmake
html/: test.html
newest/: PRD.md  SECOND-partA.md  SECOND-partB.md  SECOND-partC.md  THIRD-partA.md  THIRD-partB.md  THIRD-partC.md  comprehensive-explanation.md  design-decisions.md
pure-webshell/: CMakeLists.txt
pure-webshell/resources/qml/: main.qml
pure-webshell/resources/web/: index.html  webshell.js
pure-webshell/src/: CoreService.cpp  CoreService.h  main.cpp
qml/: main.qml
reference/: README.md  qwlroots.md  treeland.md  waylib-shared.md
src/: CMakeLists.txt  compositor.cpp  compositor.h  main.cpp
src/client/: main.cpp
